--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,4 @@ Thumbs.db
 *.mov
 *.wmv
 
-inno/setup-output-files-aupc/
-inno/setup-output-files-bt2/
-inno/setup-output-files-vtcplus/
+inno/inno-ouput/
